--- a/UAS.html
+++ b/UAS.html
@@ -71,12 +71,46 @@
         <p>Modern libraries are increasingly being redefined as places to get unrestricted access to information in many formats and from many sources. They are extending services beyond the physical walls of a building, by providing material accessible by electronic means, and by providing the assistance of librarians in navigating and analyzing very large amounts of information with a variety of digital resources. Libraries are increasingly becoming community hubs where programs are delivered and people engage in lifelong learning. As community centers, libraries are also becoming increasingly important in helping communities mobilize and organize for their rights. The relationship between librarianship and human rights works to ensure that the rights of cultural minorities, immigrants, the homeless, the disabled, LGBTQ community, as well as other marginalized groups are not infringed upon as protected in the Universal Declaration of Human Rights.</p>
     </div>
     <div class="parallax-window" data-parallax="scroll" data-image-src="./Gambar/perpus4.jpeg"></div>
-    <div class="large-12">
-        <div class="text-center" style="background-color:cornflowerblue">
+    <div class="large-12" style="background-color:cornflowerblue">
+        <div class="text-center">
             <span>
-                <h4 class="text-white page-title border border-white">WHAT CAN WE DO?</h4><i class="fas fa-book-open"></i>
+                <h4 class="text-white page-title">WHAT CAN WE DO?</h4><i class="fas fa-book-open"></i>
             </span>
         </div>
+        <div class="container">
+            <div class="text-center row">
+                <div class="card bg-light border-dark" style="width: 17rem;">
+                    <img class="card-img-top" src="./Gambar/perpus5.jpg" alt="Build community">
+                    <div class="card-body">
+                        <h5 class="card-title">Build Community</h5>
+                        <p class="card-text">Libraries are community hubs. In addition to connecting people to information, libraries connect people to people.</p>
+                    </div>
+                </div>
+                <div class="card bg-light border-dark" style="width: 17rem;">
+                    <img class="card-img-top" src="./Gambar/perpus6.jpg" alt="Build community">
+                    <div class="card-body">
+                        <h5 class="card-title">Innovate</h5>
+                        <p class="card-text">Libraries are places for community engagement, a platform for great minds to come together.</p>
+                    </div>
+                </div>
+                <div class="card bg-light border-dark" style="width: 17rem;">
+                    <img class="card-img-top" src="./Gambar/perpus7.jpg" alt="Build community">
+                    <div class="card-body">
+                        <h5 class="card-title">Protect Your Rights</h5>
+                        <p class="card-text">Libraries are advocates for your right to read and your right to reader privacy.</p>
+                    </div>
+                </div>
+                <div class="card bg-light border-dark" style="width: 17rem;">
+                    <img class="card-img-top" src="./Gambar/perpus8.jpg" alt="Build community">
+                    <div class="card-body">
+                        <h5 class="card-title">Promote Literacy</h5>
+                        <p class="card-text">Libraries are committed to helping children and adults develop the skills they need to survive and thrive in a global information society: the ability to read and use computers.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div>
 
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
